Sasha feedback, part 1

--- a/fonts.tex
+++ b/fonts.tex
@@ -310,7 +310,7 @@ Superior figures are typeset with
 \texttt{VerticalPosition=\allowbreak Superior},
 and inferiors are set with \texttt{VerticalPosition=\allowbreak Inferior}.
 
-\section{What next?}
+\exercises{}
 \begin{itemize}
 \item Learn how \texttt{fontspec} can choose optical sizes based on
     point size, either automatically from ranges embedded in OpenType fonts,
