--- a/installation.tex
+++ b/installation.tex
@@ -10,7 +10,7 @@ When you install \LaTeX{} on your computer, it comes packaged as a
 \item A common set of \LaTeX{} \introduce{packages}.
     Packages are bundles of code that do all sorts of things,
     like provide new commands or change a document's style.
-    We'll see lots of them in action throughout this book.
+    We'll see a lot of them in action throughout this book.
 \item Miscellaneous tools, like editors.
 \end{enumerate}
 Each major operating system has its own \LaTeX{} distribution:
@@ -29,7 +29,7 @@ Each major operating system has its own \LaTeX{} distribution:
     Linux distributions usually offer a \texttt{texlive-\allowbreak full}
     or \texttt{texlive-\allowbreak most} package that installs everything
     you need.\punckern\footnote{%
-    If you'd rather keep the install size down,
+    If you would rather keep the install size down,
     Linux distributions usually break \TeX{} Live into multiple packages.
     Look for ones with names like
     \texttt{texlive-\allowbreak core}, \texttt{texlive-\allowbreak luatex}
@@ -57,7 +57,7 @@ in its installation chapter. See Appendix~\ref{resources}.)
 
 If you don't want to install \LaTeX{} on your computer,
 try online editors like Share\LaTeX{} or Overleaf.
-This book won't focus on these web-based tools,
+This book doesn't focus on these web-based tools,
 but the same basics apply.
 Of course, you have less control over certain aspects,
-like available fonts, the version of \LaTeX{} that's used, and so on.
+like available fonts, the version of \LaTeX{} used, and so on.
