--- a/international.tex
+++ b/international.tex
@@ -90,7 +90,7 @@ Direct all complaints to Cartoon Network.} fromage!»
 % FFS: https://github.com/reutenauer/polyglossia/issues/68
 \directlua{polyglossia.desactivate_frpt()}
 
-\section{What next?}
+\exercises{}
 \begin{flushleft}
 \begin{itemize}
 \item See the \texttt{polyglossia} manual for language-specific commands.
