--- a/micro.tex
+++ b/micro.tex
@@ -67,7 +67,7 @@ or disable the feature entirely.}
 This feature isn't currently available for \XeLaTeX{}.
 If you want to use it, you'll need \LuaLaTeX{}.
 
-\section{What next?}
+\exercises{}
 
 As always, see the package manual for ways to tweak these features.
 \texttt{microtype} has a few other tricks,
