--- a/modern-latex.tex
+++ b/modern-latex.tex
@@ -175,8 +175,6 @@
 % Set size and style of section and subsections
 \setkomafont{section}{\Large\itshape}
 \setkomafont{subsection}{\large\itshape}
-% Don't put big spaces before chapter headings
-\renewcommand{\chapterheadstartvskip}{\vspace{0.15in}}
 
 \setcapwidth[c]{.75\textwidth}
 %\setcapmargin{0pt}
@@ -294,6 +292,8 @@
 \newcommand{\https}[1]{\href{https://#1}{\texttt{#1}}}
 
 \newcommand{\edition}{Second edition \acronym{(wip)}}
+
+\newcommand{\exercises}{\section{On your own}}
 
 % See http://tex.stackexchange.com/a/68310
 \makeatletter
