--- a/punctuation.tex
+++ b/punctuation.tex
@@ -140,7 +140,7 @@ announces
 Launch in 2\,h 10\,m.
 \end{leftfigure}
 
-\section{What next?}
+\exercises{}
 \begin{itemize}
 \item Learn more commands for spacing, such as \verb|\:|, \verb|\;|,
     \verb|\enspace|, and \verb|\quad|.
