--- a/pagelayout.tex
+++ b/pagelayout.tex
@@ -214,7 +214,7 @@ proclaims
 I love footnotes!\footnote{Perhaps a bit too much\dots}
 \end{leftfigure}
 
-\section{What next?}
+\exercises{}
 \begin{itemize}
 \item Control paragraph spacing with KOMA~Script or the \texttt{parskip} package.
 \item Set the page size and margins with the \texttt{geometry} package.
