--- a/textformatting.tex
+++ b/textformatting.tex
@@ -32,7 +32,7 @@ which excels at drawing the reader's attention away from everything around it.
 
 \section{Meeting the whole (type) family}
 
-These are just a few of the many styles you can use.
+Boldface and italics are just a few of the many styles you can use.
 A (mostly) complete list follows:
 \begin{flushleftfigure}
 \lm%
@@ -55,9 +55,9 @@ Prefer the first form (which takes the text to format as an argument)
 over the second
 (which affects the group it's issued in),
 since the former automatically fixes up the spacing around
-the formatted text.\punckern\footnote{For example,
+the formatted text. For example,
 \textit{italic type} amidst upright type needs to be followed
-by a slight amount of additional space, called an ``italic correction''\quotekern.}
+by a slight amount of additional space, called an ``italic correction''\quotekern.
 However, the second variety is your only option
 when formatting multiple paragraphs
 or defining the style of other commands.\punckern\footnote{%
@@ -72,7 +72,7 @@ sometimes called the PostScript point, is \otffrac{1}{72} of an inch.
 \LaTeX{}, for historical reasons, defines its point (\texttt{pt})
 as \otffrac{100}{7227} of an inch
 and the former as ``big points''\quotekern, or \texttt{bp}.
-Use whichever you'd like.}
+Use whichever you would like.}
 but can be adjusted by passing arguments to
 \verb|\documentclass|.\punckern\footnote{Stock \LaTeX{} classes accept
 \texttt{10pt}, \texttt{11pt}, or \texttt{12pt} as optional arguments.
@@ -101,7 +101,7 @@ To scale text relative to this default size, use the following commands:
 \texttt{\textbackslash Huge} & \Huge Example Text \\
 \end{tabular}
 \end{flushleftfigure}
-You'll find some subtleties at play here.
+You will find some subtleties at play here.
 \LaTeX's default type family, Latin Modern,
 comes in several \introduce{optical sizes}.
 Smaller fonts aren't just shrunken versions of their big siblings---they
@@ -109,7 +109,7 @@ have thicker strokes, exaggerated features,
 and more generous spacing to improve legibility at their size.
 \begin{leftfigure}
 \fontspec{lmroman5-regular} If I magnify 5 point type
-\lm so it's as tall as 11 point type,
+\lm so it is as tall as 11 point type,
 you can easily see the differences.
 \end{leftfigure}
 Multiple optical sizes were standard back when fonts were made out of metal.
@@ -166,7 +166,7 @@ Let your type breathe!\footnote{For a discussion of how much leading
 to use, see \textit{Practical Typography},
 as mentioned in Appendix~\ref{resources}.}
 
-\section{What next?}
+\exercises{}
 \begin{itemize}
 \item Learn how to underline text with the \texttt{ulem}
     package.\punckern\footnote{Other typographical tools---like italics,
