--- a/why.tex
+++ b/why.tex
@@ -36,27 +36,26 @@ Not like this:
 
 Effective written communication is about the look and layout of words,
 not just which ones you choose.
-Good typography isn't just art---it's function.
-And if you care about any of this,
-you should try \LaTeX,\punckern\footnote{Pronounced ``lay-tech''
-or ``lah-tech''}
-a program for crafting written documents.
+Good typography isn't just art---it's function---and
+\LaTeX\footnote{Pronounced ``lay-tech'' or ``lah-tech''}
+enables the everyday person to craft beautifully typeset documents
+with little effort.
 By carefully handling subtle details,
 it produces beautiful typography with little effort.
 Modern versions can also leverage recent\footnote{By recent,
 I mean ``from the mid-1990s''\quotekern, but web browsers and desktop publishing
 software are only just starting to catch up.} advances in digital typesetting,
-offering you the same tools used by professional graphic designers and
+offering the same tools used by professional graphic designers and
 publishers.
 
-\section{\texorpdfstring{\LaTeX}{LaTeX}?}
+\section{What is \texorpdfstring{\LaTeX}{LaTeX}?}
 
 \LaTeX{} is an alternative to ``word processors'' like
 Microsoft Word, Apple Pages, Google Docs,
 and LibreOffice Writer.
 These other applications operate on the principle of
 \introduce{What You See Is What You Get}
-\acronym{(wysiwyg)}, where what's on screen is the same
+\acronym{(wysiwyg)}, where what is on screen is the same
 as what comes out of your printer.
 \LaTeX{} is different. Here, documents are written as
 ``plain'' text files, using \introduce{markup}
@@ -74,7 +73,7 @@ Microsoft Word, Apple Pages, Google Docs,
 and LibreOffice Writer.
 These other applications operate on the principle of
 \introduce{What You See Is What You Get}
-\acronym{(wysiwyg)}, where what's on screen is the same
+\acronym{(wysiwyg)}, where what is on screen is the same
 as what comes out of your printer.
 \LaTeX{} is different. Here, documents are written as
 ``plain'' text files, using \introduce{markup}
@@ -117,8 +116,8 @@ but it comes with a few advantages:
     If I decide that I'd rather introduce new terms
     \textbf{\itshape with this look}, or that acronyms should be displayed
     {\small\addfontfeature{LetterSpace=6} LIKE THIS},
-    I just change the two lines that define those commands.
-    Everywhere they're used immediately takes on the new look.
+    I just change the two lines that define those commands,
+    and every instance immediately takes on the new look.
 
 \item Being able to save the document as plain text has its own benefits:
     \begin{itemize}
@@ -136,7 +135,7 @@ but it comes with a few advantages:
 \section{Another guide?}
 
 You might wonder why the world needs another guide for \LaTeX{}.
-After all, it's been around for decades.
+After all, it has been around for decades.
 A quick Amazon search finds nearly a dozen books on the topic.
 There are plenty of resources online.
 
@@ -150,7 +149,7 @@ Adobe wouldn't debut their Portable Document Format for seven more years,
 and desktop publishing was a fledgling curiosity.
 This shows---badly---in many \LaTeX{} guides.
 If you look for instructions to change your document's font,
-you'll get swamped with bespoke nonsense.\punckern\footnote{%
+you get swamped with bespoke nonsense.\punckern\footnote{%
 Take the criticisms here with a grain of
 salt. After all, the fact that all of the technology around \LaTeX{} became
 obsolete---multiple times---is a testament to its staying power.}
