Sasha feedback, part 2

--- a/math.tex
+++ b/math.tex
@@ -37,7 +37,6 @@ there are \emph{many} different commands and environments.
 You owe it to yourself to find some real references and learn what \LaTeX{}
 is capable of.
 Before moving on, though, let's see some examples of what it can do.
-\newpage
 
 \begin{enumerate}
 \item \verb|x = \frac{-b \pm \sqrt{b^2 - 4ac}}{2a}|
@@ -85,3 +84,14 @@ y
 \end{verbatim}
     \[\oint_{\partial \Sigma} \mathbf{E} \cdot \mathrm{d}\boldsymbol{\ell}  = - \frac{\mathrm{d}}{\mathrm{d}t} \iint_{\Sigma} \mathbf{B} \cdot \mathrm{d}\mathbf{S}\]
 \end{enumerate}
+
+\exercises{}
+\begin{itemize}
+\item Number equations for later reference with the \texttt{equaiton} environment.
+\item Automatically size parenthesis and braces to fit their contents
+    with \verb|\left| and \verb|\right|.
+\item Learn some of the many helpful features of the \texttt{amsmath}
+    package from the American Mathematical Society,
+    such as the \texttt{align} environment for lining up
+    equivalent equations.
+\end{itemize}
