--- a/pagelayout.tex
+++ b/pagelayout.tex
@@ -67,7 +67,7 @@ And this text is flush right.
 \texttt{itemize}, \texttt{enumerate}, and \texttt{description}.
 In all three, each item starts with an \verb|\item| command.
 To create bulleted lists, use the \texttt{itemize} environment.
-With:
+With
 \begin{leftfigure}
 \begin{lstlisting}
 \begin{itemize}
@@ -98,7 +98,7 @@ you get
 \end{enumerate}
 \end{lstlisting}
 \end{leftfigure}
-becomes
+which gives
 \begin{leftfigure}
 \lm%
 \begin{enumerate}[leftmargin=*]
@@ -152,7 +152,7 @@ gives us
 We often split pages into several columns, especially when printing on
 \textsc{a4} or \acronym{us}~\textsc{l}etter paper,
 since it provides more comfortable line widths with standard
-8--12\,pt text sizes.\punckern\footnote{You'll see different advice depending
+8--12\,pt text sizes.\punckern\footnote{You will find different advice depending
 on where you look, but as a rule of thumb,
 aim for 45 to 80 characters (including spaces) per line.
 If a line is too long, readers have an uncomfortable time scanning for
