--- a/punctuation.tex
+++ b/punctuation.tex
@@ -59,7 +59,7 @@ serve different purposes.
     \item Compound words like \emph{long-range} and \emph{field-effect}
         use hyphens.
     \item They are used in phrasal adjectives.
-        If I ask for ``five dollar bills''\punckern,
+        If I ask for ``five dollar bills''\quotekern,
         do I want five \$1 bills, or several \$5 bills?
         It's clearer that I want the latter when typeset as
         \emph{five-dollar bills}.
