--- a/textformatting.tex
+++ b/textformatting.tex
@@ -51,14 +51,13 @@ A (mostly) complete list follows:
 \texttt{\textbackslash textbf\{...\}} & \texttt{\{\textbackslash bfseries ...\}} & \textbf{boldface} \\
 \end{tabularx}
 \end{flushleftfigure}
-Prefer the first form (which takes the text to format as an argument)
-over the second
-(which affects the group it's issued in),
-since the former automatically fixes up the spacing around
+Prefer the first form, which takes the text to format as an argument,
+over the second, which affects the group it is issued in.
+The former automatically improves spacing around
 the formatted text. For example,
-\textit{italic type} amidst upright type needs to be followed
+\textit{italic type} amidst upright type should be followed
 by a slight amount of additional space, called an ``italic correction''\quotekern.
-However, the second variety is your only option
+The latter is your only option
 when formatting multiple paragraphs
 or defining the style of other commands.\punckern\footnote{%
 For instance, this book's section headers are styled with
@@ -101,16 +100,16 @@ To scale text relative to this default size, use the following commands:
 \texttt{\textbackslash Huge} & \Huge Example Text \\
 \end{tabular}
 \end{flushleftfigure}
-You will find some subtleties at play here.
+If you look carefully, you will find some subtleties at play here.
 \LaTeX's default type family, Latin Modern,
 comes in several \introduce{optical sizes}.
 Smaller fonts aren't just shrunken versions of their big siblings---they
 have thicker strokes, exaggerated features,
 and more generous spacing to improve legibility at their size.
 \begin{leftfigure}
-\fontspec{lmroman5-regular} If I magnify 5 point type
-\lm so it is as tall as 11 point type,
-you can easily see the differences.
+\fontspec{lmroman5-regular} If I make 5 point type
+\lm the same height as 11 point type,
+you can easily spot the differences.
 \end{leftfigure}
 Multiple optical sizes were standard back when fonts were made out of metal.
 But many digital fonts only have one,
