Bring back previous title spacing for appendices
Otherwise Additional Resources spans two pages and looks real wonky.

--- a/modern-latex.tex
+++ b/modern-latex.tex
@@ -411,6 +411,8 @@ his college papers.
 \input{troubleshooting}
 
 \appendix
+% Don't put big spaces before appendices
+\renewcommand{\chapterheadstartvskip}{\vspace{0.15in}}
 
 \input{history}
 \input{back}
