Dead tree copies from Lulu pending 2nd ed edits

--- a/modern-latex.tex
+++ b/modern-latex.tex
@@ -366,9 +366,8 @@ ISBN 978-1-387-80513-6
 }
 
 \vspace{\baselineskip}
-If you would like print copies of this book,
-they can be ordered at cost from \\
-\http{www.lulu.com/shop/matt-kline/modern-latex/paperback/product-23639599.html}
+Print copies of this book will be available at cost from Lulu
+once this edition is finalized.
 \vfill
 
 The author apologizes for any typos,
