Okay, fine. "you'll" is weird in a book.

--- a/micro.tex
+++ b/micro.tex
@@ -65,7 +65,7 @@ Of course, you can use package options to change this limit,
 or disable the feature entirely.}
 
 This feature isn't currently available for \XeLaTeX{}.
-If you want to use it, you'll need \LuaLaTeX{}.
+If you want to use it, you need \LuaLaTeX{}.
 
 \exercises{}
 
