--- a/troubleshooting.tex
+++ b/troubleshooting.tex
@@ -1,7 +1,7 @@
 \chapter{When Good Type Goes Bad}
 
 With luck, you're off to a solid start with \LaTeX.
-But as with any complicated tool, you'll eventually run into trouble.
+But as with any complicated tool, you will eventually run into trouble.
 Here are some common problems and things you can try to fix them.
 
 \section{Fixing overflow}
@@ -60,7 +60,7 @@ error message,\punckern\footnote{Usually this contains a succinct summary of
 the problem and the number of the line(s) it occurred on. Occasionally,
 \LaTeX{} gets \emph{really} confused and emits something so cryptic it gives
 \cpp{} template errors a run for their money.
-As you use \LaTeX, you'll start to get a feel for what sorts of
+As you use \LaTeX, you will start to get a feel for what sorts of
 mistakes cause these rare, but enigmatic messages.}
 then display an interactive prompt starting with \texttt{?}\,.
 Here you can enter instructions for how to proceed.
