Here we go again
No long Q or other stylistic alternatives, don't mess with tracking, and
bump the copyright.

--- a/modern-latex.tex
+++ b/modern-latex.tex
@@ -24,10 +24,7 @@
 \setmainfont[
     Ligatures=TeX,
     Numbers={Proportional,Lowercase},
-    % Coefficients for font-provided space, stretch, and shrink.
-    % Garamond Premier is a bit tighter than Adobe Garamond,
-    % but stretching it out about 20% gives about the same metrics.
-    WordSpace={1.2,1.2,1},
+    Contextuals=NoAlternate, % No long Q
     UprightFeatures={
         SizeFeatures={
             {Size={-10},Font=garamondpremrpro-capt},
@@ -341,7 +338,7 @@ Modern
 \null
 \vfill
 {\addfontfeature{Numbers={Proportional,Uppercase}}
-Copyright © 2018--2020 \\
+Copyright © 2018--2022 \\
 by \runauthor
 \bigskip
 
